components/simple-https/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: simple-https
  labels:
    app: simple-https
    app.kubernetes.io/component: simple-https
    app.kubernetes.io/instance: simple-https
    app.kubernetes.io/name: simple-https
    app.kubernetes.io/part-of: simple-https-app
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: simple-https-tls
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  selector:
    app: simple-https
    deployment: simple-https
